Delete hash_number, rewrite uint256_t, rename script_number to chain::number.

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,6 +39,7 @@ src_libbitcoin_la_SOURCES = \
     src/error.cpp \
     src/chain/block.cpp \
     src/chain/chain_state.cpp \
+    src/chain/compact_number.cpp \
     src/chain/header.cpp \
     src/chain/input.cpp \
     src/chain/output.cpp \
@@ -339,6 +340,7 @@ include_bitcoin_bitcoin_chaindir = ${includedir}/bitcoin/bitcoin/chain
 include_bitcoin_bitcoin_chain_HEADERS = \
     include/bitcoin/bitcoin/chain/block.hpp \
     include/bitcoin/bitcoin/chain/chain_state.hpp \
+    include/bitcoin/bitcoin/chain/compact_number.hpp \
     include/bitcoin/bitcoin/chain/header.hpp \
     include/bitcoin/bitcoin/chain/history.hpp \
     include/bitcoin/bitcoin/chain/input.hpp \
