--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -111,7 +111,9 @@
     <ClCompile Include="..\..\..\..\test\message\address.cpp" />
     <ClCompile Include="..\..\..\..\test\message\alert.cpp" />
     <ClCompile Include="..\..\..\..\test\message\alert_payload.cpp" />
-    <ClCompile Include="..\..\..\..\test\message\block_message.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\block.cpp">
+      <ObjectFileName>$(IntDir)block_message.obj</ObjectFileName>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\test\message\block_transactions.cpp" />
     <ClCompile Include="..\..\..\..\test\message\compact_block.cpp" />
     <ClCompile Include="..\..\..\..\test\message\fee_filter.cpp" />
@@ -129,7 +131,9 @@
     <ClCompile Include="..\..\..\..\test\message\reject.cpp" />
     <ClCompile Include="..\..\..\..\test\message\send_compact_blocks.cpp" />
     <ClCompile Include="..\..\..\..\test\message\send_headers.cpp" />
-    <ClCompile Include="..\..\..\..\test\message\transaction_message.cpp" />
+    <ClCompile Include="..\..\..\..\test\message\transaction.cpp">
+      <ObjectFileName>$(IntDir)transaction_message.obj</ObjectFileName>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\test\message\version.cpp" />
     <ClCompile Include="..\..\..\..\test\message\get_address.cpp" />
     <ClCompile Include="..\..\..\..\test\message\get_blocks.cpp" />
