--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -133,7 +133,9 @@
     <ClCompile Include="..\..\..\..\src\message\address.cpp" />
     <ClCompile Include="..\..\..\..\src\message\alert.cpp" />
     <ClCompile Include="..\..\..\..\src\message\alert_payload.cpp" />
-    <ClCompile Include="..\..\..\..\src\message\block_message.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\block.cpp">
+      <ObjectFileName>$(IntDir)block_message.obj</ObjectFileName>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\src\message\block_transactions.cpp" />
     <ClCompile Include="..\..\..\..\src\message\compact_block.cpp" />
     <ClCompile Include="..\..\..\..\src\message\fee_filter.cpp" />
@@ -151,7 +153,9 @@
     <ClCompile Include="..\..\..\..\src\message\reject.cpp" />
     <ClCompile Include="..\..\..\..\src\message\send_compact_blocks.cpp" />
     <ClCompile Include="..\..\..\..\src\message\send_headers.cpp" />
-    <ClCompile Include="..\..\..\..\src\message\transaction_message.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\transaction.cpp">
+      <ObjectFileName>$(IntDir)transaction_message.obj</ObjectFileName>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\src\message\version.cpp" />
     <ClCompile Include="..\..\..\..\src\message\get_address.cpp" />
     <ClCompile Include="..\..\..\..\src\message\get_blocks.cpp" />
@@ -279,7 +283,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\alert.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\alert_payload.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\block_message.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\block.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\block_transactions.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\compact_block.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\fee_filter.hpp" />
@@ -298,7 +302,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\reject.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\send_compact_blocks.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\send_headers.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\transaction_message.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\transaction.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\version.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_blocks.hpp" />
